--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
         "usingComponents" : true,
         /* 模块配置 */
         "modules" : {
-            "Push" : {}
+            "Push" : {},
+            "OAuth" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
@@ -51,6 +52,27 @@
             "sdkConfigs" : {
                 "push" : {
                     "unipush" : {}
+                }
+            },
+            "splashscreen" : {
+                "android" : {
+                    "xhdpi" : "/Users/baily/Downloads/splash.png",
+                    "xxhdpi" : "/Users/baily/Downloads/splash.png",
+                    "hdpi" : "/Users/baily/Downloads/splash.png"
+                },
+                "ios" : {
+                    "iphone" : {
+                        "portrait-896h@3x" : "/Users/baily/Downloads/splash.png",
+                        "landscape-896h@3x" : "/Users/baily/Downloads/splash.png",
+                        "portrait-896h@2x" : "/Users/baily/Downloads/splash.png",
+                        "landscape-896h@2x" : "/Users/baily/Downloads/splash.png",
+                        "iphonex" : "/Users/baily/Downloads/splash.png",
+                        "iphonexl" : "/Users/baily/Downloads/splash.png",
+                        "retina55" : "/Users/baily/Downloads/splash.png",
+                        "retina55l" : "/Users/baily/Downloads/splash.png",
+                        "retina47" : "/Users/baily/Downloads/splash.png",
+                        "retina47l" : "/Users/baily/Downloads/splash.png"
+                    }
                 }
             }
         }
